a few small improvements in Btree Map